bugfix: make a symlink

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install molecule docker
 
 before_script:
-  - mv . ../trombik.${ROLE_NAME}
+  - ln -s . ../trombik.${ROLE_NAME}
 
 script:
   - molecule test -s travisci
