--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -9,3 +9,14 @@
   apt:
     name: "{{ template_role_package }}"
     state: present
+
+- name: Enable template_role_service
+  service:
+    name: "{{ template_role_service }}"
+    enabled: yes
+
+- name: "Create /etc/default/{{ template_role_service }}"
+  template:
+    src: Debian.default.j2
+    dest: "/etc/default/{{ template_role_service }}"
+    mode: 0644
