--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -9,3 +9,14 @@
   pkgng:
     name: "{{ template_role_package }}"
     state: present
+
+- name: Enable template_role_service
+  service:
+    name: "{{ template_role_service }}"
+    enabled: yes
+
+- name: "Create /etc/rc.conf.d/{{ template_role_service }}"
+  template:
+    src: FreeBSD.rcd.j2
+    dest: "/etc/rc.conf.d/{{ template_role_service }}"
+    mode: 0644
