bugfix: validate templates and add a handler

--- a/tasks/install-OpenBSD.yml
+++ b/tasks/install-OpenBSD.yml
@@ -15,3 +15,5 @@
     name: "{{ template_role_service }}"
     arguments: "{{ template_role_flags }}"
     enabled: yes
+  notify:
+    - Restart template_role_service
