--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for bar
+
+- name: Restart template_role_service
+  service:
+    name: "{{ template_role_service }}"
+    state: restarted
