--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -20,3 +20,6 @@
     src: Debian.default.j2
     dest: "/etc/default/{{ template_role_service }}"
     mode: 0644
+    validate: sh -n %s
+  notify:
+    - Restart template_role_service
