--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -20,3 +20,6 @@
     src: FreeBSD.rcd.j2
     dest: "/etc/rc.conf.d/{{ template_role_service }}"
     mode: 0644
+    validate: sh -n %s
+  notify:
+    - Restart template_role_service
