--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -20,3 +20,6 @@
     src: RedHat.sysconfig.j2
     dest: "/etc/sysconfig/{{ template_role_service }}"
     mode: 0644
+    validate: sh -n %s
+  notify:
+    - Restart template_role_service
