--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,18 @@
 - name: "Include install-{{ ansible_os_family }}.yml"
   include: "install-{{ ansible_os_family }}.yml"
 
+- name: "Create {{ template_role_config_dir }}"
+  file:
+    path: "{{ template_role_config_dir }}"
+    state: directory
+
+- name: "Create {{ template_role_config_file }}"
+  template:
+    src: template_role.conf.j2
+    dest: "{{ template_role_config_file }}"
+  notify:
+    - Restart template_role_service
+
 - name: Start template_role_service
   service:
     name: "{{ template_role_service }}"
