--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -14,6 +14,7 @@
   service:
     name: "{{ template_role_service }}"
     enabled: yes
+    use: "{% if ansible_os_family == 'RedHat' and ansible_distribution_version is version('7.7', '>=') %}systemd{% else %}default(omit){% endif %}"
 
 - name: "Create /etc/sysconfig/{{ template_role_service }}"
   template:
