--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,3 +22,4 @@
   service:
     name: "{{ template_role_service }}"
     state: started
+    use: "{% if ansible_os_family == 'RedHat' and ansible_distribution_version is version('7.7', '>=') %}systemd{% else %}default(omit){% endif %}"
