--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -14,6 +14,8 @@
   service:
     name: "{{ template_role_service }}"
     enabled: yes
+    daemon_reload: yes
+    use: systemd
 
 - name: "Create /etc/default/{{ template_role_service }}"
   template:
