--- a/molecule/resources/playbooks/playbook.yml
+++ b/molecule/resources/playbooks/playbook.yml
@@ -4,11 +4,15 @@
   roles:
     - role: trombik.template_role
   pre_tasks:
-    - debug: var=hostvars[inventory_hostname]
+    - name: Dump all hostvars
+      debug:
+        var: hostvars[inventory_hostname]
     - name: List all services (systemd)
       # workaround ansible-lint: [303] service used in place of service module
       shell: "echo; systemctl list-units --type service"
       when:
+        # in docker, init is not systemd
+        - ansible_virtualization_type != 'docker'
         - ansible_os_family == 'RedHat' or ansible_os_family == 'Debian'
     - name: list all services (FreeBSD service)
       # workaround ansible-lint: [303] service used in place of service module
