--- a/molecule/resources/playbooks/playbook.yml
+++ b/molecule/resources/playbooks/playbook.yml
@@ -10,6 +10,7 @@
     - name: List all services (systemd)
       # workaround ansible-lint: [303] service used in place of service module
       shell: "echo; systemctl list-units --type service"
+      changed_when: false
       when:
         # in docker, init is not systemd
         - ansible_virtualization_type != 'docker'
@@ -17,10 +18,12 @@
     - name: list all services (FreeBSD service)
       # workaround ansible-lint: [303] service used in place of service module
       shell: "echo; service -l"
+      changed_when: false
       when:
         - ansible_os_family == 'FreeBSD'
     - name: list all services (rcctl)
       command: "rcctl ls all"
+      changed_when: false
       when:
         - ansible_os_family == 'OpenBSD'
 
