--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,14 @@
   notify:
     - Restart template_role_service
 
+- name: Create template_role_log_dir
+  file:
+    path: "{{ template_role_log_dir }}"
+    owner: "{{ template_role_user }}"
+    group: "{{ template_role_group }}"
+    mode: 0755
+    state: directory
+
 - name: Start template_role_service
   service:
     name: "{{ template_role_service }}"
