--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ template_role_service: "{{ __template_role_service }}"
 template_role_extra_packages: []
 template_role_user: "{{ __template_role_user }}"
 template_role_group: "{{ __template_role_group }}"
+template_role_extra_groups: []
 template_role_log_dir: /var/log/template_role
 template_role_config_dir: "{{ __template_role_config_dir }}"
 template_role_config_file: "{{ template_role_config_dir }}/sshd_config"
