--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,11 @@ galaxy_info:
   platforms:
     - name: FreeBSD
       versions:
+        - 11.3
         - 12.0
+    - name: OpenBSD
+      versions:
+        - 6.4
     - name: Ubuntu
       versions:
         - bionic
