--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,6 +11,11 @@ lint:
   name: yamllint
 
 platforms:
+  - name: freebsd-11.3
+    box: trombik/ansible-freebsd-11.3-amd64
+    memory: 512
+    cpus: 1
+    guest: freebsd
   - name: freebsd-12.0
     box: trombik/ansible-freebsd-12.0-amd64
     memory: 512
@@ -21,7 +26,7 @@ platforms:
     memory: 512
     cpus: 1
   - name: openbsd-6.3
-    box: trombik/ansible-openbsd-6.3-amd64
+    box: trombik/ansible-openbsd-6.5-amd64
     memory: 512
     cpus: 1
   - name: centos-7
