--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -20,6 +20,8 @@
     src: Debian.default.j2
     dest: "/etc/default/{{ template_role_service }}"
     mode: 0644
+    # keep the original copy in case you need the defaults in it
+    backup: yes
     validate: sh -n %s
   notify:
     - Restart template_role_service
