--- a/tests/molecule/molecule/default/roles/docker/tasks/main.yml
+++ b/tests/molecule/molecule/default/roles/docker/tasks/main.yml
@@ -27,6 +27,12 @@
     - ansible_os_family != 'FreeBSD'
     - ansible_os_family != 'OpenBSD'
 
+- name: Install daemon
+  apt:
+    name: daemon
+    state: present
+  when:
+    - ansible_os_family == 'Debian'
 
 - name: Create vagrant user
   user:
