bugfix: introduce docker_packages, and docker_extra_packages
install docker_packages in a single task

--- a/tests/molecule/molecule/default/group_vars/all.yml
+++ b/tests/molecule/molecule/default/group_vars/all.yml
@@ -1,1 +1,8 @@
 ---
+
+os_docker_extra_packages:
+  FreeBSD: []
+  OpenBSD: []
+  Debian: mailutils
+  RedHat: mailx
+docker_extra_packages: "{{ os_docker_extra_packages[ansible_os_family] }}"
