--- a/tests/molecule/molecule/travisci_centos7/prepare.yml
+++ b/tests/molecule/molecule/travisci_centos7/prepare.yml
@@ -4,6 +4,6 @@
   gather_facts: false
   tasks:
     - name: Install required packages
-      raw: yum install -y python sudo yum-plugin-ovl bash
+      raw: yum install -y python sudo yum-plugin-ovl bash rsyslog
       become: false
       changed_when: false
