--- a/tests/molecule/molecule/default/roles/docker/tasks/main.yml
+++ b/tests/molecule/molecule/default/roles/docker/tasks/main.yml
@@ -3,48 +3,25 @@
 - name: "Include variables from {{ ansible_os_family }}.yml"
   include_vars: "{{ ansible_os_family }}.yml"
 
-- name: Install ping(8)
+- name: Install docker_packages
   package:
-    name: "{{ docker_package_ping }}"
+    name: "{{ docker_packages }}"
     state: present
   when:
     - ansible_os_family != 'FreeBSD'
     - ansible_os_family != 'OpenBSD'
 
-- name: Install mail(1)
+- name: Install docker_extra_packages
   package:
-    name: "{{ docker_package_mail }}"
+    name: "{{ docker_extra_packages }}"
     state: present
   when:
     - ansible_os_family != 'FreeBSD'
     - ansible_os_family != 'OpenBSD'
-
-- name: Install ss (for testinfra)
-  package:
-    name: "{{ docker_package_ss }}"
-    state: present
-  when:
-    - ansible_os_family != 'FreeBSD'
-    - ansible_os_family != 'OpenBSD'
-
-- name: Install daemon
-  apt:
-    name: daemon
-    state: present
-  when:
-    - ansible_os_family == 'Debian'
 
 - name: Create vagrant user
   user:
     name: vagrant
-
-- name: Install rsyslog
-  package:
-    name: "{{ docker_package_rsyslog }}"
-    state: present
-  when:
-    - ansible_os_family != 'FreeBSD'
-    - ansible_os_family != 'OpenBSD'
 
 - name: Start rsyslog
   service:
