--- a/tests/molecule/molecule/default/roles/docker/vars/RedHat.yml
+++ b/tests/molecule/molecule/default/roles/docker/vars/RedHat.yml
@@ -1,7 +1,6 @@
 ---
-
-docker_package_ping: iputils
-docker_package_mail: mailx
-docker_package_ss: iproute
+docker_packages:
+  - iputils
+  - iproute
 docker_package_rsyslog: rsyslog
 docker_service_rsyslog: rsyslog
