bugfix: remove unnecessary code

--- a/tests/molecule/molecule/default/group_vars/all.yml
+++ b/tests/molecule/molecule/default/group_vars/all.yml
@@ -3,6 +3,6 @@
 os_docker_extra_packages:
   FreeBSD: []
   OpenBSD: []
-  Debian: mailutils
-  RedHat: mailx
+  Debian: []
+  RedHat: []
 docker_extra_packages: "{{ os_docker_extra_packages[ansible_os_family] }}"
